--- a/admin/template/bankBlackList.html
+++ b/admin/template/bankBlackList.html
@@ -1,6 +1,6 @@
 <input type="hidden"  ng-model="data.setting.search_api" ng-init="data.setting.search_api ='/bankBlackList'">
 <input type="hidden"  ng-model="data.setting.init_api" ng-init="data.setting.init_api ='/bankBlackInit'">
-<div  ng-init="init()">
+<div  ng-init="init(1)">
 	<div class="grid_3 grid_4">
 		<div class="grid-form1">
 			<form class="form-inline">
