--- a/admin/template/rechargeAuditList.html
+++ b/admin/template/rechargeAuditList.html
@@ -12,6 +12,15 @@
 				<label class="sr-only" for="exampleInputPassword3"></label>
 				用户名：<input type="text" ng-model="data.search.u_account" class="form-control" >
 			  </div>
+			  <div class="form-group">
+				<label class="sr-only" for="exampleInputPassword3"></label>
+				充值类型：
+				<select ng-model="data.search.ua_type" ng-change="selectChange();">
+					<option value="">全部</option>
+					<option value="1">系统</option>
+					<option value="2">用户</option>
+				</select>
+			  </div>
 			  <button type="submit" class="btn btn-default" ng-click="search()">搜寻</button>
 			  <button  class="btn btn-default" ng-click="reset()">清除搜寻条件</button>
 			</form>
