--- a/admin/template/user_list.html
+++ b/admin/template/user_list.html
@@ -4,8 +4,8 @@
 		<div class="grid-form1">
 			<form class="form-inline">
 			  <div class="form-group">
-				<label class="sr-only" for="exampleInputPassword3">用互帐号</label>
-				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="用互帐号">
+				<label class="sr-only" for="exampleInputPassword3">用戶帐号</label>
+				<input type="text" ng-model="data.search.u_account"  class="form-control" placeholder="用戶帐号">
 				<input type="hidden" ng-model="data.search.superior_id"  ng-init="data.search.superior_id = 0">
 			  </div>
 			  <button type="submit" class="btn btn-default" ng-click="click_search()">搜寻</button>
@@ -26,20 +26,23 @@
 				<table class="table table-bordered">
 					<thead>
 						<tr>
-							<th width="10%" style="text-align:center" >用互帐号</th>
-							<th width="10%" style="text-align:center" >用互状态</th>
+							<th width="5%" style="text-align:center" >用戶帐号</th>
+							<th width="8%" style="text-align:center" >用戶状态</th>
 							<th width="10%" style="text-align:center" >锁定绑定银行卡</th>
+							<th width="10%" style="text-align:center" >用戶餘額</th>
 							<th width="10%" style="text-align:center">上級</th>
-							<th width="60%" style="text-align:center">功能</th>
+							<th  style="text-align:center">功能</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr ng-repeat="row in data.list">
 							<td valign="middle">
-								{{row.u_account}}
+								{{row.u_account}}-{{row.u_balance}}
 							</td>
 							<td valign="middle" ng-bind="row.u_is_lock_str"></td>
 							<td valign="middle" ng-bind="row.u_bank_card_lock_str"></td>
+							<td valign="middle" ng-if="row.u_balance" ng-bind="row.u_balance"></td>
+							<td valign="middle" ng-if="!row.u_balance" >0</td>
 							<td  valign="middle" ng-if="row.u_superior_id =='0'"  >總代號</td>
 							<td ng-if="row.u_superior_id !='0'"  ng-bind="row.superior_account"></td>
 							<td valign="middle">
