--- a/sass/style.scss
+++ b/sass/style.scss
@@ -684,6 +684,7 @@ body {
                   padding-left: 10px;
                   top: 4px;
                   input[type=text],
+                  input[type=number],
                   input[type=password] {
                     height: 30px;
                     font-size: 18px;
@@ -1038,6 +1039,16 @@ body {
         text-align: center;
         img {
           width: 100%;
+          &.qrcode {
+            position: absolute;
+            width: 150px;
+            height: 150px;
+            top: 15px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
+          }
         }
         .type {
           font-size: 24px;
