--- a/admin/template/user_list.html
+++ b/admin/template/user_list.html
@@ -37,7 +37,7 @@
 					<tbody>
 						<tr ng-repeat="row in data.list">
 							<td valign="middle">
-								{{row.u_account}}-{{row.u_balance}}
+								{{row.u_account}}
 							</td>
 							<td valign="middle" ng-bind="row.u_is_lock_str"></td>
 							<td valign="middle" ng-bind="row.u_bank_card_lock_str"></td>
