--- a/admin/template/loginList.html
+++ b/admin/template/loginList.html
@@ -11,6 +11,10 @@
 				<label class="sr-only" for="exampleInputPassword3"></label>
 				用户帐号：<input type="text" ng-model="data.search.u_account" class="form-control" >
 			  </div>
+			  <div class="form-group">
+				<label class="sr-only" for="exampleInputPassword3"></label>
+				IP位址：<input type="text" ng-model="data.search.ull_ip" class="form-control" >
+			  </div>
 			  <button type="submit" class="btn btn-default" ng-click="search()">搜寻</button>
 			  <button  class="btn btn-default" ng-click="reset()">清除搜寻条件</button>
 			</form>
