--- a/admin/template/chargebackAuditList.html
+++ b/admin/template/chargebackAuditList.html
@@ -38,9 +38,7 @@
 								状态
 							</th>
 							<th style="text-align:center">
-								<a href="" ng-click="orderClick('ua_from');$event.preventDefault();">操作帐号</a> 
-								<i  ng-show="data.order.ua_from=='DESC'" class="fa fa-chevron-down" aria-hidden="true"></i>
-								<i  ng-show="data.order.ua_from=='ASC'"  class="fa fa-chevron-up" aria-hidden="true"></i>
+								操作帐号
 							</th>
 							<th  style="text-align:center">
 								<a href="" ng-click="orderClick('ua_value');$event.preventDefault();">扣减额</a> 
