--- a/admin/template/editReceivingBankCardForm.html
+++ b/admin/template/editReceivingBankCardForm.html
@@ -15,6 +15,12 @@
 			</div>
 		</div>
 		<div class="form-group">
+			<label for="inputEmail3" class="col-sm-2 control-label hor-form">分行名称</label>
+			<div class="col-sm-2">
+			  <input type="text"   ng-model="data.input.rbc_branch_name"  class="form-control" required="required"  placeholder="分行名称">
+			</div>
+		</div>
+		<div class="form-group">
 			<label for="inputEmail3" class="col-sm-2 control-label hor-form">收款人名称</label>
 			<div class="col-sm-2">
 				<input type="text"  ng-model="data.input.rbc_bank_user_name"   maxlength="12" required="required" class="form-control" placeholder="收款人名称">
