--- a/admin/template/wechat3alipay2.html
+++ b/admin/template/wechat3alipay2.html
@@ -14,6 +14,13 @@
 		</div>
 	  </div>
 	  <div class="form-group">
+		<label for="inputEmail3" class="col-sm-2 control-label hor-form" >支付宝QR码</label>
+		<div class="col-sm-2">
+			<img name="image" src="/images/alipay2payQR/{{data.alipay2_pay_QR}}">
+			<input type="file" name="alipay2_pay_QR" id="fileToUpload">
+		</div>
+	  </div>
+	  <div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<button type="submit"  class="btn btn-default">送出</button>
 		</div>
