--- a/admin/template/withdrawalAuditList.html
+++ b/admin/template/withdrawalAuditList.html
@@ -42,6 +42,9 @@
 								<i  ng-show="data.order.ua_status_show=='ASC'"  class="fa fa-chevron-up" aria-hidden="true"></i>
 							</th>
 							<th width="5%"  style="text-align:center">
+								操作帐号
+							</th>
+							<th width="5%"  style="text-align:center">
 								<a href="" ng-click="orderClick('ua_add_datetime');$event.preventDefault();">申请时间</a> 
 								<i  ng-show="data.order.ua_add_datetime=='DESC'" class="fa fa-chevron-down" aria-hidden="true"></i>
 								<i  ng-show="data.order.ua_add_datetime=='ASC'"  class="fa fa-chevron-up" aria-hidden="true"></i>
@@ -73,6 +76,7 @@
 								<span ng-repeat-end></span>
 								<input type="text" ng-model="row.ua_change_status_remarks" value="{row.ua_change_status_remarks}" ng-disabled="row.change_select_onchange!='1'" placeholder="请输入处理备注">
 							</td>
+							<td valign="middle" ng-bind="row.ad_account"></td>
 							<td valign="middle" ng-bind="row.ua_add_datetime"></td>
 							<td valign="middle"  ng-bind="row.today_payment_number+'/'+row.today_payment_value"></td>
 						</tr>
