--- a/admin/template/addParentUser.html
+++ b/admin/template/addParentUser.html
@@ -20,6 +20,13 @@
 		  <input type="password"  onfocus="this.type='password'" name="passwd" autocomplete="off" value="" maxlength="12" required="required" class="form-control" placeholder="密碼">
 		</div>
 	  </div>
+		<div class="form-group">
+		<label for="inputEmail3" class="col-sm-2 control-label hor-form">AG 帐号类型</label>
+		<div class="col-sm-10">
+			正试号<input type="radio" value="1" name="ag_game_model"  checked="checked">
+			测试号<input type="radio" value="0" name="ag_game_model">
+		</div>
+	  </div>
 	  <div class="form-group">
 		<div class="col-sm-offset-2 col-sm-10">
 			<input  type="hidden" value='0'  name="superior" >
